--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.5.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
@@ -44,5 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy" : "http://localhost:8070/"
+  "proxy": "http://localhost:8070/"
 }
