--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^6.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
