--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.5.0",
     "react-scripts": "^5.0.1",
     "react-stripe-checkout": "^2.6.3",
+    "react-text-truncate": "^0.19.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
