--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
     "axios": "^1.2.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
+    "mdb-react-ui-kit": "^5.1.0",
     "mongoose": "^6.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.0.0-beta.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "^5.0.1",
