--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "^5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "react-stripe-checkout": "^2.6.3",
     "react-text-truncate": "^0.19.0",
     "redux": "^4.2.0",
