--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.7.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-image-zoom": "^1.3.1",
     "react-pro-sidebar": "^1.0.0-beta.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
