--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "lodash.truncate": "^4.4.2",
     "mdb-react-ui-kit": "^5.1.0",
     "mongoose": "^6.8.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-data-table-component": "^7.5.3",
