--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
+    "face-api.js": "^0.22.2",
     "lodash.truncate": "^4.4.2",
     "mdb-react-ui-kit": "^5.1.0",
     "mongoose": "^6.8.0",
